QuickWikiの検索結果のデザイン

--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,8 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.3em 1.0em;
+  /* padding: 0.6em 1.2rem; */
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -47,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #d4d4d4;
 }
 button:focus,
 button:focus-visible {
@@ -95,6 +96,3 @@ article {
   background: lightgreen;
   padding: 20px;
 }
-
-
-
