--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -7,7 +7,7 @@
   min-width: 180px;
   height: 100vh;
   box-sizing: border-box;
-  background-color:#ffffff;
+  background-color:#f2f2f2;
   user-select: none;
 }
 
