--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -1,13 +1,8 @@
 .sidebar {
-  position:sticky;
-  top: 0;
-  z-index: 999;
+  z-index: 9;
   font-size: 35px;
   width: 15%;
   min-width: 180px;
-  height: 100vh;
-  box-sizing: border-box;
-  background-color:#f2f2f2;
   user-select: none;
 }
 
@@ -15,6 +10,10 @@
   font-size: 35px;
   user-select: none;
   text-align:center;
+}
+.sidebar_content {
+  position: sticky;
+  top: 145px;
 }
 .sidebar ul {
   font-size: 20px;
