--- a/src/style.css
+++ b/src/style.css
@@ -83,7 +83,8 @@ article {
 
 #app {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
